# blog-project

server/: pyproject.toml
server/server/: database.py  main.py  repository.py  schemas.py  start_app.py
server/server/routers/: blog.py  stripe.py
webapp/: package-lock.json  package.json
webapp/src/: App.css  App.tsx  main.tsx
webapp/src/components/: Feed.tsx  Navbar.tsx
webapp/src/pages/: About.tsx  Home.tsx  Subscribe.tsx
webapp/src/state/: store.ts  themeModeSlice.ts
webapp/src/types/: types.ts
