[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["adam-michael-bishop <adam.michael.bishop@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
